# QML_Upload_File_UI

./: .gitignore  CMakeLists.txt  Images.qrc  Main.qml  README.md  main.cpp
Utils/: CustomListItem.qml  UploadRect.qml
